correction AUTHORS file

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,7 @@
 # This file lists all individuals having contributed content to the repository.
 # For how it is generated, see `hack/generate-authors.sh`.
 
-Diego Andrés Castellanos Rodríguez <777@holbetonschool.com>
+Diegokernel <47120841+Diegokernel@users.noreply.github.com>
+Diegokernel <777@holbertonschool.com>
+macoyulloa <47118702+macoyulloa@users.noreply.github.com>
 Maria Alejandra Coy Ulloa <malejacoy@hotmail.com>
